format the project using black formatter

--- a/locale/vi/LC_MESSAGES/django.po
+++ b/locale/vi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-07 18:04+0700\n"
+"POT-Creation-Date: 2023-06-08 14:45+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,18 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+
+#: backend/admin/account.py:12
+msgid "Personal info"
+msgstr "Thông tin cá nhân"
+
+#: backend/admin/account.py:14
+msgid "Permissions"
+msgstr "Phân quyền"
+
+#: backend/admin/account.py:24
+msgid "Important dates"
+msgstr "Ngày tháng quan trọng"
 
 #: backend/enums.py:5 keywordrecognition/enums.py:5
 msgid "Server error"
@@ -46,27 +58,39 @@ msgstr "Không tìm thấy Firebase user bằng email"
 msgid "Account does not exist"
 msgstr "Tài khoản không tồn tại"
 
-#: backend/models/account.py:16
+#: backend/models/account.py:46
+msgid "The Email must be set"
+msgstr "Email không được bỏ trống"
+
+#: backend/models/account.py:62
+msgid "Superuser must have is_staff=True."
+msgstr "Superuser phải có is_staff=True"
+
+#: backend/models/account.py:64
+msgid "Superuser must have is_superuser=True."
+msgstr "Superuser phải có is_superuser=True"
+
+#: backend/models/account.py:72
 msgid "account"
 msgstr "tài khoản"
 
-#: backend/models/account.py:17
+#: backend/models/account.py:73
 msgid "accounts"
 msgstr "tài khoản"
 
-#: backend/models/account.py:19
+#: backend/models/account.py:80
 msgid "email"
 msgstr ""
 
-#: backend/models/account.py:20 keywordrecognition/models/eliza_bot.py:13
+#: backend/models/account.py:83 keywordrecognition/models/eliza_bot.py:13
 msgid "name"
 msgstr "tên"
 
-#: backend/models/account.py:21
+#: backend/models/account.py:84
 msgid "password"
 msgstr "mật khẩu"
 
-#: backend/models/account.py:22 keywordrecognition/models/eliza_bot.py:14
+#: backend/models/account.py:86 keywordrecognition/models/eliza_bot.py:14
 msgid "description"
 msgstr "mô tả"
 
@@ -214,3 +238,15 @@ msgstr "từ đồng nghĩa"
 #: keywordrecognition/models/synonym.py:14
 msgid "value"
 msgstr "giá trị"
+
+#: main/settings/defaults.py:138
+msgid "Vietnam"
+msgstr "Tiếng Việt"
+
+#: main/settings/defaults.py:139
+msgid "English"
+msgstr "Tiếng Anh"
+
+#: main/templates/admin/base_site.html:40
+msgid "Dashboard"
+msgstr ""
