--- a/locale/vi/LC_MESSAGES/django.po
+++ b/locale/vi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-22 00:14+0700\n"
+"POT-Creation-Date: 2023-08-02 12:53+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -34,17 +34,19 @@ msgstr "Phân quyền"
 msgid "Important dates"
 msgstr "Ngày tháng quan trọng"
 
-#: backend/apps.py:8
-#, fuzzy
-#| msgid "Account Management"
-msgid "Account and Bot Management"
-msgstr "Quản lý tài khoản"
+#: backend/admin/bot.py:55
+msgid "type"
+msgstr ""
 
-#: backend/enums.py:5 keywordrecognition/enums.py:5
+#: backend/apps.py:8
+msgid "Account and Bot Management"
+msgstr ""
+
+#: backend/enums.py:5 keywordrecognition/enums.py:5 nlp/enums.py:5
 msgid "Server error"
 msgstr "Lỗi Server"
 
-#: backend/enums.py:6 keywordrecognition/enums.py:6
+#: backend/enums.py:6 keywordrecognition/enums.py:6 nlp/enums.py:6
 msgid "Permission error"
 msgstr "Lỗi phân quyền (Permission error)"
 
@@ -67,6 +69,18 @@ msgstr "Không tìm thấy Firebase user bằng email"
 #: backend/enums.py:17
 msgid "Account does not exist"
 msgstr "Tài khoản không tồn tại"
+
+#: backend/enums.py:22 keywordrecognition/enums.py:21 nlp/enums.py:21
+msgid "Invalid File extension! Please use a .txt file"
+msgstr "Đuôi file không hợp lệ! Xin hãy dùng .txt file"
+
+#: backend/enums.py:23
+msgid "Invalid File extension! Please use a .csv file"
+msgstr "Đuôi file không hợp lệ! Xin hãy dùng .csv file"
+
+#: backend/enums.py:24 keywordrecognition/enums.py:22 nlp/enums.py:22
+msgid "File upload must be under 2MB"
+msgstr "File upload vượt quá 2MB"
 
 #: backend/models/account.py:46
 msgid "The Email must be set"
@@ -136,7 +150,7 @@ msgstr ""
 msgid "Eliza Chatbot Does not exist"
 msgstr "Eliza Chatbot không tồn tại"
 
-#: keywordrecognition/enums.py:11
+#: keywordrecognition/enums.py:11 nlp/enums.py:11
 msgid "Chosen Bot does not belong to this User"
 msgstr "Bot không thuộc tài khoản này"
 
@@ -144,23 +158,15 @@ msgstr "Bot không thuộc tài khoản này"
 msgid "Bot not set, please set the bot before using ElizaService"
 msgstr "Bot không xác định, hãy set bot trước khi sử dụng ElizaService"
 
-#: keywordrecognition/enums.py:16
+#: keywordrecognition/enums.py:16 nlp/enums.py:16
 msgid "Invalid goto key"
 msgstr "goto key không hợp lệ"
 
-#: keywordrecognition/enums.py:17
+#: keywordrecognition/enums.py:17 nlp/enums.py:17
 msgid "Invalid result index"
 msgstr "result index không hợp lệ"
 
-#: keywordrecognition/enums.py:21
-msgid "Invalid File extension! Please use a .txt file"
-msgstr "Đuôi file không hợp lệ! Xin hãy dùng .txt file"
-
-#: keywordrecognition/enums.py:22
-msgid "File upload must be under 2MB"
-msgstr "File upload vượt quá 2MB"
-
-#: keywordrecognition/enums.py:26
+#: keywordrecognition/enums.py:26 nlp/enums.py:26
 msgid "Keyword does not exist"
 msgstr "Từ khóa không tồn tại"
 
@@ -249,7 +255,7 @@ msgstr "luật phân rã"
 msgid "template"
 msgstr ""
 
-#: keywordrecognition/models/synonym.py:10
+#: keywordrecognition/models/synonym.py:10 nlp/models/entity.py:28
 msgid "synonym"
 msgstr "từ đồng nghĩa"
 
@@ -357,70 +363,102 @@ msgstr ""
 msgid "%(timesince)s ago"
 msgstr "%(timesince)s trước"
 
-#: nlp/models/entity.py:10
+#: nlp/enums.py:10
+msgid "NLP Chatbot Does not exist"
+msgstr "NLP Chatbot không tồn tại"
+
+#: nlp/enums.py:15
+msgid "Bot not set, please set the bot before using NLPService"
+msgstr "Bot không xác định, hãy set bot trước khi sử dụng NLPService"
+
+#: nlp/models/entity.py:10 nlp/models/response_entity.py:17
 msgid "entity"
-msgstr ""
+msgstr "thực thể"
 
 #: nlp/models/entity.py:11
 msgid "entities"
-msgstr ""
+msgstr "thực thể"
 
-#: nlp/models/entity.py:14 nlp/models/intent.py:14 nlp/models/nlp_bot.py:9
+#: nlp/models/entity.py:14 nlp/models/entity_category.py:14
+#: nlp/models/intent.py:14 nlp/models/nlp_bot.py:9
 msgid "nlp bot"
 msgstr ""
+
+#: nlp/models/entity.py:17
+msgid "entity name"
+msgstr "tên thực thể"
+
+#: nlp/models/entity.py:25 nlp/models/entity_category.py:10
+msgid "entity category"
+msgstr "danh mục thực thể"
+
+#: nlp/models/entity_category.py:11
+msgid "entity categories"
+msgstr "danh mục thực thể"
 
 #: nlp/models/intent.py:10 nlp/models/response.py:14
 #: nlp/models/training_phrase.py:14
 msgid "intent"
-msgstr ""
+msgstr "ý định"
 
 #: nlp/models/intent.py:11
 msgid "intents"
-msgstr ""
+msgstr "ý định"
+
+#: nlp/models/intent.py:17
+msgid "intent name"
+msgstr "tên ý định"
 
 #: nlp/models/nlp_bot.py:10
-#, fuzzy
-#| msgid "eliza bots"
 msgid "nlp bots"
-msgstr "eliza bot"
+msgstr "nlp bot"
 
 #: nlp/models/response.py:10 nlp/models/response.py:17
+#: nlp/models/response_entity.py:14 nlp/models/response_entity_category.py:14
 msgid "response"
-msgstr ""
+msgstr "phản hồi"
 
 #: nlp/models/response.py:11
 msgid "responses"
-msgstr ""
+msgstr "phản hồi"
 
 #: nlp/models/response.py:24
 msgid "Instant response"
-msgstr ""
+msgstr "Phản hồi lập tức"
 
 #: nlp/models/response.py:25
 msgid "Collect response"
-msgstr ""
+msgstr "Phản hồi thu thập thông tin"
 
 #: nlp/models/response.py:26
 msgid "Provide response"
-msgstr ""
+msgstr "Phản hồi cung cấp thông tin"
 
 #: nlp/models/response.py:33
-#, fuzzy
-#| msgid "default message"
-msgid "default response type"
-msgstr "message mặc định"
+msgid "response type"
+msgstr "loại phản hồi"
+
+#: nlp/models/response_entity.py:10 nlp/models/response_entity.py:11
+msgid "response entity mapping"
+msgstr "thực thể"
+
+#: nlp/models/response_entity_category.py:10
+#: nlp/models/response_entity_category.py:11
+#: nlp/models/response_entity_category.py:21
+msgid "required entity category"
+msgstr "danh mục thực thể"
 
 #: nlp/models/training_phrase.py:10
 msgid "training phrase"
-msgstr ""
+msgstr "câu mẫu"
 
 #: nlp/models/training_phrase.py:11
 msgid "training phrases"
-msgstr ""
+msgstr "câu mẫu"
 
 #: nlp/models/training_phrase.py:17
 msgid "phrase"
-msgstr ""
+msgstr "câu mẫu"
 
 #~ msgid "quit message"
 #~ msgstr "message kết thúc"
